# DummyPyPi2

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: deploy-gh-pages.yml  gh-pages.yml  publish-package.yml  publish-to-test-pypi.yml  publish.yml  run-package-tests.yml  run-tests.yml
doc/: .readthedocs.yaml  mkdocs.yml
doc/overrides/: main.html
doc/source/: conf.py  index.md  index.rst
src/dummypypi2/: __init__.py  config.py  utils.py
src/dummypypi2/_config/: __init__.py  _algo.py  _plot.py  _print.py  algo.py
src/dummypypi2/control/: __init__.py  robust.py
tests/: test_config.py  test_utils.py
