[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dummypypi2-bartwolleswink"
dynamic = ["version"]
dependencies = [
  "numpy",
]
requires-python = ">=3.8"
authors = [
  {name = "Bart Wolleswinkel", email = "b.wolleswinkel@tudelft.nl"}
]
description = "Dummy package to test direct publishing from GitHub to PyPi"
readme = "README.md"
keywords = ['python', 'dummy', 'github', 'pypi', 'test']
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]

[project.urls]
Documentation = "https://geopes.readthedocs.io/en/latest/"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dummypypi2/_version.py"