[build-system]
requires = ["uv_build", "setuptools-scm"]
build-backend = "uv_build"

[project]
name = "dummypypi2"
dynamic = ["version"]
dependencies = [
  "numpy",
]
requires-python = ">=3.8"
authors = [
  {name = "Bart Wolleswinkel", email = "b.wolleswinkel@tudelft.nl"}
]
description = "Dummy package to test direct publishing from GitHub to PyPi"
readme = "README.md"
keywords = ['python', 'dummy', 'github', 'pypi', 'test']
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]

[tool.setuptools-scm]
write_to = "src/dummypypi2/_version.py"